--- a/FE_MVC_App/view.html
+++ b/FE_MVC_App/view.html
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta http-equiv="X-UA-Compatible" content="IE=edge" charset="UTF-8"/>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge" charset="UTF-8" />
 	<title>PlantSense</title>
 	<meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
-	<link rel="icon" href="assets/img/plant_sense_icon.ico" type="image/x-icon"/>
+	<link rel="icon" href="assets/img/plant_sense_icon.ico" type="image/x-icon" />
 
 	<!-- Fonts and icons -->
 	<script src="assets/js/plugin/webfont/webfont.min.js"></script>
 	<script>
 		WebFont.load({
-			google: {"families":["Lato:300,400,700,900"]},
-			custom: {"families":["Flaticon", "Font Awesome 5 Solid", "Font Awesome 5 Regular", "Font Awesome 5 Brands", "simple-line-icons"], urls: ['assets/css/fonts.min.css']},
-			active: function() {
+			google: { "families": ["Lato:300,400,700,900"] },
+			custom: { "families": ["Flaticon", "Font Awesome 5 Solid", "Font Awesome 5 Regular", "Font Awesome 5 Brands", "simple-line-icons"], urls: ['assets/css/fonts.min.css'] },
+			active: function () {
 				sessionStorage.fonts = true;
 			}
 		});
@@ -24,7 +25,7 @@
 	<link rel="stylesheet" href="stylesheet.css">
 
 
-    <!--<script src="Model.js"></script>-->
+	<!--<script src="Model.js"></script>-->
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
 	<script src="gateway.js"></script>
 	<script src="controller.js"></script>
@@ -35,168 +36,154 @@
 <body onload="init()">
 	<div class="main-header" style="background-color: rgb(116, 189, 116);">
 		<!-- Header -->
-		<nav class="navbar navbar-header navbar-expand-lg" data-background-color= "grey" style="margin-bottom: 15px">
-			<img id="logo" width = 15% height = 40% src= "assets/img/plant_sense_logo.ico"
-            style = "border-radius: 10%; margin-top: 15px; border-style: solid;"
-			alt="PlantSense">
+		<nav class="navbar navbar-header navbar-expand-lg" data-background-color="grey" style="margin-bottom: 15px">
+			<img id="logo" width=15% height=40% src="assets/img/plant_sense_logo.ico"
+				style="border-radius: 10%; margin-top: 15px; border-style: solid;" alt="PlantSense">
 		</nav>
 		<!-- End Navbar -->
 	</div>
-		<!-- Page content -->
-	<div class="content" style="margin-top:  50px;">	
-			<div class="page-inner mt--5">
-	
-				<!-- Environment sensor data -->
-				<div class="row mt--2">
-					<div class="col-md-4">
-						<div class="card full-height">
-							<div class="card-body">
-								<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
-									<div class="px-2 pb-2 pb-md-0 text-center">
-										<div id="circles-1"></div>
-										<h4 class="fw-bold mt-3 mb-0">Temperature</h4>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="card full-height">
-							<div class="card-body">
-								<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
-									<div class="px-2 pb-2 pb-md-0 text-center">
-										<div id="circles-2"></div>
-										<h4 class="fw-bold mt-3 mb-0">Humidty</h4>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-4">
-						<div class="card full-height">
-							<div class="card-body">
-								<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
-									<div class="px-2 pb-2 pb-md-0 text-center">
-										<div id="circles-3"></div>
-										<h4 class="fw-bold mt-3 mb-0">Water level</h4>
-									</div>
+	<!-- Page content -->
+	<div class="content" style="margin-top:  50px;">
+		<div class="page-inner mt--5">
+
+			<!-- Environment sensor data -->
+			<div class="row mt--2">
+				<div class="col-md-4">
+					<div class="card full-height">
+						<div class="card-body">
+							<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
+								<div class="px-2 pb-2 pb-md-0 text-center">
+									<div id="circles-1"></div>
+									<h4 class="fw-bold mt-3 mb-0">Temperature</h4>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
-				
-				<!-- Plant-info and buggy video stream -->
-				<div class="row">
-					<!-- Carrousell with plant info -->
-					<div class="col-md-8" style="display: flex;align-items: center; justify-content: center">
-						<div class="card full-height">
-							<div class="card-header">
-								<div class="card-head-row">
-									<div id= "plant_name" class="card-title">Plant details</div>
+				<div class="col-md-4">
+					<div class="card full-height">
+						<div class="card-body">
+							<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
+								<div class="px-2 pb-2 pb-md-0 text-center">
+									<div id="circles-2"></div>
+									<h4 class="fw-bold mt-3 mb-0">Humidty</h4>
 								</div>
-								<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#update-plant-info-modal" onclick="onEditPlantButtonClick()">
-									Edit
-								</button>
-								<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#update-plant-info-modal">
-									New
-								</button>
 							</div>
-							<div class="card-body">
-								<div class="row mt--2">
-									<div class="col-md-6">
+						</div>
+					</div>
+				</div>
+				<div class="col-md-4">
+					<div class="card full-height">
+						<div class="card-body">
+							<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
+								<div class="px-2 pb-2 pb-md-0 text-center">
+									<div id="circles-3"></div>
+									<h4 class="fw-bold mt-3 mb-0">Water level</h4>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+
+			<!-- Plant-info and buggy video stream -->
+			<div class="row">
+				<!-- Carrousell with plant info -->
+				<div class="col-md-8">
+					<div class="card">
+						<div class="card-header">
+							<div class="card-head-row">
+								<div id="plant_name" class="card-title">Plant details</div>
+							</div>
+							<button type="button" class="btn btn-primary" data-toggle="modal"
+								data-target="#update-plant-info-modal" onclick="onEditPlantButtonClick()">
+								Edit
+							</button>
+							<button type="button" class="btn btn-primary" data-toggle="modal"
+								data-target="#update-plant-info-modal">
+								New
+							</button>
+						</div>
+						<div class="card-body">
+							<div class="row mt--2">
+								<div class="col-md-6">
+									<div class="card full-height">
+										<div class=" card-header"
+											style="display: flex;align-items: center; justify-content: center">
+											<button id="PlantDetailPictureButton" class="btn btn-primary btn-round"
+												onclick="onPlantDetailPictureButtonClick()"> Real view </button>
+										</div>
+										<div class=" card-body"
+											style="display: flex;align-items: center; justify-content: center">
+											<img id="PlantDetailPicture" width=50% height=auto
+												src="assets/img/plant_sense_icon.ico">
+										</div>
+									</div>
+								</div>
+								<div class="col-md-6">
+									<div class="row" height=50%>
 										<div class="card full-height">
-											<div class=" card-header" style="display: flex;align-items: center; justify-content: center">
-												<button id= "PlantDetailPictureButton" class="btn btn-primary btn-round" onclick="onPlantDetailPictureButtonClick()"> Real view </button>
+											<div class="card-header">
+												<div class="card-head-row">
+													<div id="plant_name" class="card-title">About</div>
+												</div>
 											</div>
-											<div class=" card-body" style="display: flex;align-items: center; justify-content: center">
-												<img id = "PlantDetailPicture" src="assets/img/plant_sense_icon.ico">
+											<div class="card-body">
+												<table class="table table-striped" width=100%>
+													<tbody>
+														<tr>
+															<th>Node ID</th>
+															<td id="curr_plant_nodeID"></td>
+														</tr>
+														<tr>
+															<th>Name</th>
+															<td id="curr_plant_name"></td>
+														</tr>
+														<tr>
+															<th>Description</th>
+															<td id="curr_plant_desc"></td>
+														</tr>
+														<tr>
+															<th>Breed</th>
+															<td id="curr_plant_breed"></td>
+														</tr>
+														<tr>
+															<th>Last watered</th>
+															<td id="curr_plant_last_wat"></td>
+														</tr>
+														<tr>
+															<th>Disease</th>
+															<td id="curr_plant_disease"></td>
+														</tr>
+													</tbody>
+												</table>
 											</div>
 										</div>
 									</div>
-									<div class="col-md-6">
-										<div class="row" height = 50%>
-											<div class="card full-height">
-												<div class="card-header">
-													<div class="card-head-row">
-														<div id= "plant_name" class="card-title">About</div>
-													</div>
-												</div>
-												<div class="card-body">
-													<table class="table table-striped" width=100%>
-														<tbody>
-															<tr>
-																<th>Node ID</th>
-																<td id="curr_plant_nodeID"></td>
-															</tr>
-															<tr>
-																<th>Name</th>
-																<td id="curr_plant_name"></td>
-															</tr>
-															<tr>
-																<th>Description</th>
-																<td id="curr_plant_desc"></td>
-															</tr>
-															<tr>
-																<th>Breed</th>
-																<td id="curr_plant_breed"></td>
-															</tr>
-															<tr>
-																<th>Last watered</th>
-																<td id="curr_plant_last_wat"></td>
-															</tr>
-															<tr>
-																<th>Disease</th>
-																<td id="curr_plant_disease"></td>
-															</tr>
-														</tbody>
-													</table>		
+									<div class="row" height=50%>
+										<div class="card full-height full-width">
+											<div class="card-header">
+												<div class="card-head-row">
+													<div id="plant_name" class="card-title">Measured conditions</div>
 												</div>
 											</div>
-										</div>
-										<div class="row" height = 50%>
-											<div class="card full-height full-width">
-												<div class="card-header">
-													<div class="card-head-row">
-														<div id= "plant_name" class="card-title">Measured conditions</div>
+											<div class="card-body">
+												<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
+													<div class="px-2 pb-2 pb-md-0 text-center">
+														<div id="circles-4"></div>
+														<h4 class="fw-bold mt-3 mb-0">Health</h4>
 													</div>
 												</div>
-												<div class="card-body">
-													<div class="col-md-6" width =  style="display: flex;align-items: center; justify-content: center">
-														<div class="card full-height" style="display: flex;align-items: center; justify-content: center">
-															<div class="card-body">
-																<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
-																	<div class="px-2 pb-2 pb-md-0 text-center">
-																		<div id="circles-4"></div>
-																		<h4 class="fw-bold mt-3 mb-0">Health</h4>
-																	</div>
-																</div>
-															</div>
-														</div>
+												<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
+													<div class="px-2 pb-2 pb-md-0 text-center">
+														<div id="circles-5"></div>
+														<h4 class="fw-bold mt-3 mb-0">Moisture</h4>
 													</div>
-													<div class = "col-md-6">
-														<div class="card full-height">
-															<div class="card-body">
-																<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
-																	<div class="px-2 pb-2 pb-md-0 text-center">
-																		<div id="circles-5"></div>
-																		<h4 class="fw-bold mt-3 mb-0">Moisture</h4>
-																	</div>
-																</div>
-															</div>
-														</div>
-													</div>
-													<div class = "col-md-6">
-														<div class="card full-height">
-															<div class="card-body">
-																<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
-																	<div class="px-2 pb-2 pb-md-0 text-center">
-																		<div id="circles-6"></div>
-																		<h4 class="fw-bold mt-3 mb-0">Light</h4>
-																	</div>
-																</div>
-															</div>
-														</div>
+												</div>
+												<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
+													<div class="px-2 pb-2 pb-md-0 text-center">
+														<div id="circles-6"></div>
+														<h4 class="fw-bold mt-3 mb-0">Light</h4>
 													</div>
 												</div>
 											</div>
@@ -204,38 +191,39 @@
 									</div>
 								</div>
 							</div>
-							<nav aria-label="Page navigation example">
-								<ul class="pagination justify-content-center">
-									<li class="page-item disabled">
-										<a class="page-link" href="#" tabindex="-1">Previous</a>
-									</li>
-									<li class="page-item"><a class="page-link" href="#">1</a></li>
-									<li class="page-item">
-										<a class="page-link" href="#">Next</a>
-									</li>
-								</ul>
-							</nav>
+						</div>
+						<nav aria-label="Page navigation example">
+							<ul class="pagination justify-content-center">
+								<li class="page-item">
+									<a class="page-link" href="#" tabindex="-1" onclick="onPlantDetailNavigationPreviousClick()">Previous</a>
+								</li>
+								<li class="page-item" id="current-plant-nav-index"></li>
+								<li class="page-item">
+									<a class="page-link" href="#" onclick="onPlantDetailNavigationNextClick()">Next</a>
+								</li>
+							</ul>
+						</nav>
+					</div>
+				</div>
+
+				<!-- Video stream -->
+				<div class="col-md-4">
+					<div class="card full-height">
+						<div class="card-header">
+							<div class="card-title">Live Streaming</div>
+							<!--<div class="card-category">March 25 - April 02</div>-->
+						</div>
+						<div class="card-body pb-0" id="live-streaming-body">
 						</div>
 					</div>
-	
-					<!-- Video stream -->
-					<div class="col-md-4">
-						<div class="card full-height">
-							<div class="card-header">
-								<div class="card-title">Live Streaming</div>
-								<!--<div class="card-category">March 25 - April 02</div>-->
-							</div>
-							<div class="card-body pb-0" id="live-streaming-body">
-							</div>
-						</div>
-					</div>
+				</div>
 
 			</div>
 		</div>
 	</div>
 
 	<!-- Modal windows -->
-	<div id = "update-plant-info-modal" class="modal" tabindex="-1" role="dialog">
+	<div id="update-plant-info-modal" class="modal" tabindex="-1" role="dialog">
 		<div class="modal-dialog" role="document">
 			<div class="modal-content">
 				<div class="modal-header">
@@ -244,7 +232,8 @@
 				<div class="modal-body">
 					<div class="form-group">
 						<label for="update-plant-nodeID">Node ID</label>
-						<input type="text" class="form-control input-square" id="update-plant-nodeId" placeholder="Your Microbit node ID">
+						<input type="text" class="form-control input-square" id="update-plant-nodeId"
+							placeholder="Your Microbit node ID">
 					</div>
 					<div class="form-group">
 						<label for="update-plant-name">Name</label>
@@ -252,9 +241,10 @@
 					</div>
 					<div class="form-group">
 						<label for="update-plant-desc">Description</label>
-						<input type="text" class="form-control input-square" id="update-plant-desc" placeholder="Description">
+						<input type="text" class="form-control input-square" id="update-plant-desc"
+							placeholder="Description">
 					</div>
-					
+
 					<div class="form-group">
 						<label for="update-plant-breed">Breed</label>
 						<select class="form-control input-square" id="update-plant-breed">
@@ -264,7 +254,8 @@
 					</div>
 				</div>
 				<div class="modal-footer">
-					<button type="button" class="btn btn-primary" data-dismiss="modal" onclick="onSavePlantInformationModalButtonClick()">Save changes</button>
+					<button type="button" class="btn btn-primary" data-dismiss="modal"
+						onclick="onSavePlantInformationModalButtonClick()">Save changes</button>
 					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
 				</div>
 			</div>
@@ -310,4 +301,5 @@
 	<!-- Atlantis JS -->
 	<script src="assets/js/atlantis.min.js"></script>
 </footer>
+
 </html>
