--- a/FE_MVC_App/view.html
+++ b/FE_MVC_App/view.html
@@ -34,229 +34,252 @@
 <!-- BODY -->
 
 <body onload="init()">
-	<div class="main-header" style="background-color: rgb(116, 189, 116);">
-		<!-- Header -->
-		<nav class="navbar navbar-header navbar-expand-lg" data-background-color="grey" style="margin-bottom: 15px">
-			<img id="logo" width=15% height=40% src="assets/img/plant_sense_logo.ico"
-				style="border-radius: 10%; margin-top: 15px; border-style: solid;" alt="PlantSense">
-		</nav>
-		<!-- End Navbar -->
-	</div>
-	<!-- Page content -->
-	<div class="content" style="margin-top:  50px;">
-		<div class="page-inner mt--5">
 
-			<!-- Environment sensor data -->
-			<div class="row mt--2">
-				<div class="col-md-4">
-					<div class="card full-height">
-						<div class="card-body">
-							<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
-								<div class="px-2 pb-2 pb-md-0 text-center">
-									<div id="circles-1"></div>
-									<h4 class="fw-bold mt-3 mb-0">Temperature</h4>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card full-height">
-						<div class="card-body">
-							<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
-								<div class="px-2 pb-2 pb-md-0 text-center">
-									<div id="circles-2"></div>
-									<h4 class="fw-bold mt-3 mb-0">Humidty</h4>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-4">
-					<div class="card full-height">
-						<div class="card-body">
-							<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
-								<div class="px-2 pb-2 pb-md-0 text-center">
-									<div id="circles-3"></div>
-									<h4 class="fw-bold mt-3 mb-0">Water level</h4>
-								</div>
+	<div style="background-color: rgb(116, 189, 116);">
+		<!-- Header -->
+		<div data-background-color="grey" style="margin-bottom: 15px; margin-top: 15px">
+			<img id="logo" width=15% height=40% src="assets/img/plant_sense_logo.ico"
+				style="border-radius: 10%; margin-top: 15px; margin-bottom: 15px; margin-left: 15px; border-style: solid;"
+				alt="PlantSense">
+			<!-- End Navbar -->
+		</div>
+		<!-- Page content -->
+		<!-- Environment sensor data -->
+		<div class="row mt--2" style="margin-top: 15px;">
+			<div class="col" style="margin-left: 15px; width: 25%;">
+				<div class="card full-height">
+					<div class="card-body">
+						<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
+							<div class="px-2 pb-2 pb-md-0 text-center">
+								<div id="circles-1"></div>
+								<h4 class="fw-bold mt-3 mb-0">Temperature</h4>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
-
-			<!-- Plant-info and buggy video stream -->
-			<div class="row">
-				<!-- Carrousell with plant info -->
-				<div class="col-md-8">
-					<div class="card">
-						<div class="card-header">
-							<div class="card-head-row">
-								<div id="plant_name" class="card-title">Plant details</div>
+			<div class="col" style="width: 25%">
+				<div class="card full-height">
+					<div class="card-body">
+						<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
+							<div class="px-2 pb-2 pb-md-0 text-center">
+								<div id="circles-2"></div>
+								<h4 class="fw-bold mt-3 mb-0">Humidty</h4>
 							</div>
-							<button type="button" class="btn btn-primary" data-toggle="modal"
-								data-target="#update-plant-info-modal" onclick="onEditPlantButtonClick()">
-								Edit
-							</button>
-							<button type="button" class="btn btn-primary" data-toggle="modal"
-								data-target="#update-plant-info-modal">
-								New
-							</button>
-						</div>
-						<div class="card-body">
-							<div class="row mt--2">
-								<div class="col-md-6">
-									<div class="card full-height">
-										<div class=" card-header"
-											style="display: flex;align-items: center; justify-content: center">
-											<button id="PlantDetailPictureButton" class="btn btn-primary btn-round"
-												onclick="onPlantDetailPictureButtonClick()"> Real view </button>
-										</div>
-										<div class=" card-body"
-											style="display: flex;align-items: center; justify-content: center">
-											<img id="PlantDetailPicture" width=50% height=auto
-												src="assets/img/plant_sense_icon.ico">
-										</div>
-									</div>
-								</div>
-								<div class="col-md-6">
-									<div class="row" height=50%>
-										<div class="card full-height">
-											<div class="card-header">
-												<div class="card-head-row">
-													<div id="plant_name" class="card-title">About</div>
-												</div>
-											</div>
-											<div class="card-body">
-												<table class="table table-striped" width=100%>
-													<tbody>
-														<tr>
-															<th>Node ID</th>
-															<td id="curr_plant_nodeID"></td>
-														</tr>
-														<tr>
-															<th>Name</th>
-															<td id="curr_plant_name"></td>
-														</tr>
-														<tr>
-															<th>Description</th>
-															<td id="curr_plant_desc"></td>
-														</tr>
-														<tr>
-															<th>Breed</th>
-															<td id="curr_plant_breed"></td>
-														</tr>
-														<tr>
-															<th>Last watered</th>
-															<td id="curr_plant_last_wat"></td>
-														</tr>
-														<tr>
-															<th>Disease</th>
-															<td id="curr_plant_disease"></td>
-														</tr>
-													</tbody>
-												</table>
-											</div>
-										</div>
-									</div>
-									<div class="row" height=50%>
-										<div class="card full-height full-width">
-											<div class="card-header">
-												<div class="card-head-row">
-													<div id="plant_name" class="card-title">Measured conditions</div>
-												</div>
-											</div>
-											<div class="card-body">
-												<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
-													<div class="px-2 pb-2 pb-md-0 text-center">
-														<div id="circles-4"></div>
-														<h4 class="fw-bold mt-3 mb-0">Health</h4>
-													</div>
-												</div>
-												<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
-													<div class="px-2 pb-2 pb-md-0 text-center">
-														<div id="circles-5"></div>
-														<h4 class="fw-bold mt-3 mb-0">Moisture</h4>
-													</div>
-												</div>
-												<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
-													<div class="px-2 pb-2 pb-md-0 text-center">
-														<div id="circles-6"></div>
-														<h4 class="fw-bold mt-3 mb-0">Light</h4>
-													</div>
-												</div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</div>
-						<nav aria-label="Page navigation example">
-							<ul class="pagination justify-content-center">
-								<li class="page-item">
-									<a class="page-link" href="#" tabindex="-1" onclick="onPlantDetailNavigationPreviousClick()">Previous</a>
-								</li>
-								<li class="page-item" id="current-plant-nav-index"></li>
-								<li class="page-item">
-									<a class="page-link" href="#" onclick="onPlantDetailNavigationNextClick()">Next</a>
-								</li>
-							</ul>
-						</nav>
-					</div>
-				</div>
-
-				<!-- Video stream -->
-				<div class="col-md-4">
-					<div class="card full-height">
-						<div class="card-header">
-							<div class="card-title">Live Streaming</div>
-							<!--<div class="card-category">March 25 - April 02</div>-->
-						</div>
-						<div class="card-body pb-0" id="live-streaming-body">
 						</div>
 					</div>
 				</div>
-
+			</div>
+			<div class="col" style="margin-right: 15px; width: 25%;">
+				<div class="card full-height">
+					<div class="card-body">
+						<div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
+							<div class="px-2 pb-2 pb-md-0 text-center">
+								<div id="circles-3"></div>
+								<h4 class="fw-bold mt-3 mb-0">Water level</h4>
+							</div>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
-	</div>
 
-	<!-- Modal windows -->
-	<div id="update-plant-info-modal" class="modal" tabindex="-1" role="dialog">
-		<div class="modal-dialog" role="document">
-			<div class="modal-content">
-				<div class="modal-header">
-					<h5 class="modal-title">Plant Information</h5>
+		<!-- Plant-info and buggy video stream -->
+		<div class="row" style="margin-right: 15px; margin-left: 15px; height: 50%; justify-content: center;">
+			<!-- Carrousell with plant info -->
+			<div style="width: 60%">
+				<div class="card">
+					<div class="card-header">
+						<div class="card-head-row">
+							<div id="plant_name" class="card-title">Plant details</div>
+							<div class="card-tools">
+								<button type="button" class="btn btn-primary" data-toggle="modal"
+									data-target="#update-plant-info-modal" onclick="onEditPlantButtonClick()">
+									Edit
+								</button>
+								<button type="button" class="btn btn-primary" data-toggle="modal"
+									data-target="#update-plant-info-modal">
+									New
+								</button>
+							</div>
+						</div>
+					</div>
+					<div class="row">
+						<div class="col" style="width: 30%; margin-left: 15px; margin-top: 15px;">
+							<div class="card full-height">
+								<div class=" card-header"
+									style="display: flex;align-items: center; justify-content: center">
+									<button id="PlantDetailPictureButton" class="btn btn-primary btn-round"
+										onclick="onPlantDetailPictureButtonClick()"> Real view </button>
+								</div>
+								<div class=" card-body"
+									style="display: flex;align-items: center; justify-content: center">
+									<img id="PlantDetailPicture" width=50% height=auto
+										src="assets/img/plant_sense_icon.ico">
+								</div>
+							</div>
+						</div>
+						<div class="col" style="width: auto; margin-right: 15px; margin-top: 15px;">
+							<div class="row" height=50%>
+								<div class="card" width="50px">
+									<div class="card-header">
+										<div class="card-head-row">
+											<div id="plant_name" class="card-title">About</div>
+										</div>
+									</div>
+									<div>
+										<table class="table table-striped mb-4" style="width: 200px">
+											<tbody>
+												<tr>
+													<th>Node ID</th>
+													<td id="curr_plant_nodeID"></td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+												</tr>
+												<tr>
+													<th>Name</th>
+													<td id="curr_plant_name"></td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+												</tr>
+												<tr>
+													<th>Description</th>
+													<td id="curr_plant_desc"></td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+												</tr>
+												<tr>
+													<th>Breed</th>
+													<td id="curr_plant_breed"></td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+												</tr>
+												<tr>
+													<th>Last watered</th>
+													<td id="curr_plant_last_wat"></td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+												</tr>
+												<tr>
+													<th>Disease</th>
+													<td id="curr_plant_disease"></td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+													<td> </td>
+												</tr>
+											</tbody>
+										</table>
+									</div>
+								</div>
+							</div>
+							<div>
+								<div style="margin-left: 15px; margin-top: 15px; align-content: center;">
+									<div class = "col" style="align-content: center;">
+										<div class="px-2 pb-2 pb-md-0">
+											<div id="circles-5"></div>
+											<h4 class="fw-bold mt-3 mb-0">Moisture</h4>
+										</div>
+									</div>
+									<div class = "col" style="align-content: right;">
+										<div class="px-2 pb-2 pb-md-0">
+											<div id="circles-6"></div>
+											<h4 class="fw-bold mt-3 mb-0">Light</h4>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<nav aria-label="Page navigation example">
+						<ul class="pagination justify-content-center">
+							<li class="page-item">
+								<a class="page-link" href="#" tabindex="-1"
+									onclick="onPlantDetailNavigationPreviousClick()">Previous</a>
+							</li>
+							<li class="page-item" id="current-plant-nav-index"></li>
+							<li class="page-item">
+								<a class="page-link" href="#" onclick="onPlantDetailNavigationNextClick()">Next</a>
+							</li>
+						</ul>
+					</nav>
 				</div>
-				<div class="modal-body">
-					<div class="form-group">
-						<label for="update-plant-nodeID">Node ID</label>
-						<input type="text" class="form-control input-square" id="update-plant-nodeId"
-							placeholder="Your Microbit node ID">
-					</div>
-					<div class="form-group">
-						<label for="update-plant-name">Name</label>
-						<input type="text" class="form-control input-square" id="update-plant-name" placeholder="Name">
-					</div>
-					<div class="form-group">
-						<label for="update-plant-desc">Description</label>
-						<input type="text" class="form-control input-square" id="update-plant-desc"
-							placeholder="Description">
-					</div>
+			</div>
 
-					<div class="form-group">
-						<label for="update-plant-breed">Breed</label>
-						<select class="form-control input-square" id="update-plant-breed">
-							<option>Green bean</option>
-							<option>Tomato</option>
-						</select>
+			<!-- Video stream -->
+			<div style="width: 30%; height: 500px; margin-left: 40px;">
+				<div class="card full-height">
+					<div class="card-header">
+						<div class="card-title">Live Streaming</div>
+						<!--<div class="card-category">March 25 - April 02</div>-->
+					</div>
+					<div class="card-body pb-1" id="live-streaming-body" style="align-content: center;">
+						<img style="width: 100%; border-style: solid" src="assets/img/under_development.png"
 					</div>
 				</div>
-				<div class="modal-footer">
-					<button type="button" class="btn btn-primary" data-dismiss="modal"
-						onclick="onSavePlantInformationModalButtonClick()">Save changes</button>
-					<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+			</div>
+
+		</div>
+
+		<!-- Modal windows -->
+		<div id="update-plant-info-modal" class="modal" tabindex="-1" role="dialog">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-header">
+						<h5 class="modal-title">Plant Information</h5>
+					</div>
+					<div class="modal-body">
+						<div class="form-group">
+							<label for="update-plant-nodeID">Node ID</label>
+							<input type="text" class="form-control input-square" id="update-plant-nodeId"
+								placeholder="Your Microbit node ID">
+						</div>
+						<div class="form-group">
+							<label for="update-plant-name">Name</label>
+							<input type="text" class="form-control input-square" id="update-plant-name"
+								placeholder="Name">
+						</div>
+						<div class="form-group">
+							<label for="update-plant-desc">Description</label>
+							<input type="text" class="form-control input-square" id="update-plant-desc"
+								placeholder="Description">
+						</div>
+
+						<div class="form-group">
+							<label for="update-plant-breed">Breed</label>
+							<select class="form-control input-square" id="update-plant-breed">
+								<option>Green bean</option>
+								<option>Tomato</option>
+							</select>
+						</div>
+					</div>
+					<div class="modal-footer">
+						<button type="button" class="btn btn-primary" data-dismiss="modal"
+							onclick="onSavePlantInformationModalButtonClick()">Save changes</button>
+						<button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+					</div>
 				</div>
 			</div>
 		</div>
